--- a/src/Pages/form.css
+++ b/src/Pages/form.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   background: white;
-  padding-top: 20px;
+  padding: 25px;
 }
 
 #log-in > h2 {
